--- a/LOOPUIUX/app/build.gradle
+++ b/LOOPUIUX/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
   implementation 'com.github.bumptech.glide:glide:4.12.0'
   annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+  implementation 'com.facebook.fresco:fresco:2.4.0'
 }
