--- a/LOOPUIUX/app/src/main/AndroidManifest.xml
+++ b/LOOPUIUX/app/src/main/AndroidManifest.xml
@@ -3,13 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Theme.LOOPUIUX">
+      android:theme="@style/Theme.LOOPUIUX"
+      android:name=".myapp.MyApplication">
     <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
