Added room database

--- a/LOOPUIUX/build.gradle
+++ b/LOOPUIUX/build.gradle
@@ -24,3 +24,8 @@ allprojects {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
+ext {
+  roomVersion = '2.3.0'
+  coroutines = '1.3.9'
+}
